Import of ABW/Class-Base-0.02 from CPAN.
gitpan-cpan-distribution: Class-Base
gitpan-cpan-version:      0.02
gitpan-cpan-path:         ABW/Class-Base-0.02.tar.gz
gitpan-cpan-author:       ABW
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -14,6 +14,16 @@
 #========================================================================
 
 #------------------------------------------------------------------------
+# Version 0.02  2002/02/20
+#------------------------------------------------------------------------
+
+* Added the clone() method as suggested by Brian Moseley
+
+* Added the id(), debug() and debugging() methods to provide a fairly
+  simple mechanism for generating debugging information.
+
+
+#------------------------------------------------------------------------
 # Version 0.01  2002/01/11
 #------------------------------------------------------------------------
 
