Import of ABW/Class-Base-0.03 from CPAN.
gitpan-cpan-distribution: Class-Base
gitpan-cpan-version:      0.03
gitpan-cpan-path:         ABW/Class-Base-0.03.tar.gz
gitpan-cpan-author:       ABW
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -9,9 +9,19 @@
 #   Andy Wardley   <abw@kfs.org>
 #
 # REVISION
-#   $Id$
+#   $Id: Changes,v 1.1.1.1 2002/04/05 09:29:34 abw Exp $
 #
 #========================================================================
+
+#------------------------------------------------------------------------
+# Version 0.03 
+#------------------------------------------------------------------------
+
+* Added the params() method which is typically called from the init()
+  method to copy value from a configuration hash into $self.  
+
+* Minor changes to debug() method to only use object value _DEBUG if
+  defined, otherwise fall back on $DEBUG package variable.
 
 #------------------------------------------------------------------------
 # Version 0.02  2002/02/20
