Import of SZABGAB/Class-Base-0.04 from CPAN.
gitpan-cpan-distribution: Class-Base
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SZABGAB/Class-Base-0.04.tar.gz
gitpan-cpan-author:       SZABGAB
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -8,10 +8,17 @@
 # AUTHOR
 #   Andy Wardley   <abw@kfs.org>
 #
-# REVISION
-#   $Id: Changes,v 1.1.1.1 2002/04/05 09:29:34 abw Exp $
-#
 #========================================================================
+
+#------------------------------------------------------------------------
+# Version 0.04 2012/02/06
+#------------------------------------------------------------------------
+
+* Test script is using Test::More instead the home-made ok() and is().
+
+* Recommend using Badger::Base instead.
+
+* Gabor Szabo co-maintainer.
 
 #------------------------------------------------------------------------
 # Version 0.03 
