--- a/Changes
+++ b/Changes
@@ -11,6 +11,14 @@
 #========================================================================
 
 #------------------------------------------------------------------------
+# Version 0.05 2012/05/16
+#------------------------------------------------------------------------
+
+* Silencing a warning by chromatic RT 75286
+
+* Linking to source repository
+
+#------------------------------------------------------------------------
 # Version 0.04 2012/02/06
 #------------------------------------------------------------------------
 
